# rag-llm

./: .gitignore  README.md  bash_scripts.sh  main.ipynb  pyproject.toml
app/: server.py
src/: azopenai_api_setup.py  config.py  data_utils.py  db_config.json  eval_graph_rag.py  eval_sql_rag.py  prompt_templates.py  tools.py  utils.py
