[tool.poetry]
name = "rag_neo4j_lc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langchain = ">=0.0.313, <0.1"
pydantic = "<2"
python-dotenv = "^1.0.0"
openai = "1.6.1"
azure-identity = "*"
html2text = "*"
langchain-experimental = "^0.0.47"
pandas = "^2.1.4"
psycopg2 = "2.9.9"
langchain-openai = "*"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"